--- a/L5_ assignment/styles.css
+++ b/L5_ assignment/styles.css
@@ -3,7 +3,7 @@
 }
 
 input[type=button], input[type=submit], input[type=reset] {
-  background-color: #04AA6D;
+  background-color: #e7b0e4;
   border: none;
   color: white;
   padding: 16px 32px;
@@ -29,7 +29,7 @@ input[type=text]:focus {
   background-color: lightblue;
 }
 input[type=text] {
-  background-color: #3CBC8D;
+  background-color: #c90fcf;
   color: white;
 }
 .long-form{
@@ -83,7 +83,7 @@ p {
   max-width: 600px;
   width: 100%;
   border-radius: 4px;
-  border: 2px solid #04AA6D;;
+  border: 2px solid #d67ec0;;
   background-color:bisque;
   padding: 20px;
 }
